test/1.2/errors/T_WNOVER.dml
/*
  © 2021-2023 Intel Corporation
  SPDX-License-Identifier: MPL-2.0
*/
/// WARNING WNOVER T_WNOVER.dml
/// COMPILE-ONLY

device test;
